--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@discordjs/opus": "^0.8.0",
     "@discordjs/voice": "^0.13.0",
     "discord.js": "^14.6.0",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "sodium": "3.0.2"
   }
 }
