--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/builders": "^0.15.0",
     "@discordjs/opus": "^0.8.0",
+    "@discordjs/rest": "^0.5.0",
     "@discordjs/voice": "^0.13.0",
+    "discord-api-types": "^0.34.0",
+    "discord-player": "^5.2.2",
     "discord.js": "^14.6.0",
-    "dotenv": "^16.0.3",
-    "sodium": "3.0.2"
+    "dotenv": "^16.0.3"
   }
 }
